// Entity-relationship model for the ACME facility incident management platform.
//
// Generated with @dbml/cli straight off a live PostgreSQL carrying this
// service's schema, so it reflects what the database actually holds rather
// than a hand-drawn approximation:
//
//   npx -p @dbml/cli db2dbml postgres \
//     'postgresql://USER:PASSWORD@HOST:5432/DBNAME?schemas=public' \
//     -o docs/schema.dbml
//
// app/schema.sql stays the source of truth; regenerate this file after
// changing it. Paste the contents into https://dbdiagram.io to draw the ERD.
//
// Two indexes on `incidents` are absent because they are expression indexes,
// which DBML has no syntax for: the GIN full-text index over
// to_tsvector('english', title || ' ' || description), and the pg_trgm GIN
// index over the same concatenation. Both exist only to rank duplicate
// candidates (see app/duplicates.py) and neither carries a relationship, so
// the diagram loses nothing.
//
// One default was corrected by hand: db2dbml renders the `specialties` array
// default as the unparseable `ARRAY[text[]`, where the database holds '{}'.

Table "users" {
  "id" int8 [pk, not null, increment]
  "email" text [unique, not null]
  "full_name" text [not null]
  "password_hash" text [not null]
  "role" text [not null, check: `role = ANY (ARRAY['employee'::text, 'engineer'::text, 'facility_admin'::text])`]
  "is_active" bool [not null, default: true]
  "created_at" timestamptz [not null, default: `now()`]
}

Table "buildings" {
  "id" int8 [pk, not null, increment]
  "name" text [unique, not null]
  "address" text
  "created_at" timestamptz [not null, default: `now()`]
}

Table "floors" {
  "id" int8 [pk, not null, increment]
  "building_id" int8 [not null]
  "level" int4 [not null]
  "name" text
  "created_at" timestamptz [not null, default: `now()`]

  Indexes {
    (building_id, level) [type: btree, unique, name: "floors_building_id_level_key"]
  }
}

Table "seats" {
  "id" int8 [pk, not null, increment]
  "floor_id" int8 [not null]
  "code" text [not null]
  "description" text
  "created_at" timestamptz [not null, default: `now()`]

  Indexes {
    (floor_id, code) [type: btree, unique, name: "seats_floor_id_code_key"]
  }
}

Table "engineer_profiles" {
  "id" int8 [pk, not null, increment]
  "user_id" int8 [unique, not null]
  "specialties" "text[]" [not null, default: `'{}'::text[]`]
  "phone" text
  "is_available" bool [not null, default: true]
  "max_active_incidents" int4 [not null, check: `max_active_incidents > 0`, default: 10]
  "created_at" timestamptz [not null, default: `now()`]
}

Table "assets" {
  "id" int8 [pk, not null, increment]
  "code" text [unique, not null]
  "name" text [not null]
  "asset_type" text [not null]
  "manufacturer" text
  "model" text
  "building_id" int8
  "floor_id" int8
  "seat_id" int8
  "installed_on" date
  "expected_life_months" int4 [check: `expected_life_months > 0`]
  "service_interval_months" int4 [check: `service_interval_months > 0`]
  "last_serviced_on" date
  "retired_on" date
  "notes" text
  "created_at" timestamptz [not null, default: `now()`]

  Indexes {
    building_id [type: btree, name: "idx_assets_building"]
    seat_id [type: btree, name: "idx_assets_seat"]
    asset_type [type: btree, name: "idx_assets_type"]
  }
}

Table "incidents" {
  "id" int8 [pk, not null, increment]
  "title" text [not null]
  "description" text [not null]
  "category" text [not null]
  "priority" text [not null, check: `priority = ANY (ARRAY['LOW'::text, 'MEDIUM'::text, 'HIGH'::text, 'CRITICAL'::text])`, default: 'MEDIUM']
  "status" text [not null, check: `status = ANY (ARRAY['OPEN'::text, 'IN_PROGRESS'::text, 'BLOCKED'::text, 'RESOLVED'::text, 'CLOSED'::text])`, default: 'OPEN']
  "reporter_id" int8 [not null]
  "assignee_id" int8
  "building_id" int8
  "floor_id" int8
  "seat_id" int8
  "is_escalated" bool [not null, default: false]
  "escalation_note" text
  "blocked_reason" text
  "resolution" text
  "created_at" timestamptz [not null, default: `now()`]
  "updated_at" timestamptz [not null, default: `now()`]
  "acknowledged_at" timestamptz
  "assigned_at" timestamptz
  "resolved_at" timestamptz
  "closed_at" timestamptz
  "asset_id" int8

  Indexes {
    asset_id [type: btree, name: "idx_incidents_asset"]
    assignee_id [type: btree, name: "idx_incidents_assignee"]
    building_id [type: btree, name: "idx_incidents_building"]
    category [type: btree, name: "idx_incidents_category"]
    created_at [type: btree, name: "idx_incidents_created_at"]
    priority [type: btree, name: "idx_incidents_priority"]
    reporter_id [type: btree, name: "idx_incidents_reporter"]
    status [type: btree, name: "idx_incidents_status"]
  }
}

Table "incident_notes" {
  "id" int8 [pk, not null, increment]
  "incident_id" int8 [not null]
  "author_id" int8 [not null]
  "body" text [not null]
  "is_internal" bool [not null, default: false]
  "created_at" timestamptz [not null, default: `now()`]

  Indexes {
    (incident_id, created_at) [type: btree, name: "idx_notes_incident"]
  }
}

Table "notifications" {
  "id" int8 [pk, not null, increment]
  "user_id" int8 [not null]
  "incident_id" int8
  "event" text [not null]
  "body" text [not null]
  "is_read" bool [not null, default: false]
  "created_at" timestamptz [not null, default: `now()`]

  Indexes {
    (user_id, is_read, created_at) [type: btree, name: "idx_notifications_user"]
  }
}

Table "refresh_tokens" {
  "id" int8 [pk, not null, increment]
  "user_id" int8 [not null]
  "token_hash" text [unique, not null]
  "expires_at" timestamptz [not null]
  "revoked_at" timestamptz
  "replaced_by" int8
  "created_at" timestamptz [not null, default: `now()`]

  Indexes {
    (user_id, revoked_at) [type: btree, name: "idx_refresh_tokens_user"]
  }
}

Table "notification_events" {
  "id" int8 [pk, not null, increment]
  "event" text [not null]
  "incident_id" int8
  "actor_id" int8
  "detail" text
  "attempts" int4 [not null, default: 0]
  "processed_at" timestamptz
  "created_at" timestamptz [not null, default: `now()`]

  Indexes {
    id [type: btree, name: "idx_notification_events_pending"]
  }
}

Ref "assets_building_id_fkey":"buildings"."id" ?<? "assets"."building_id" [delete: set null]

Ref "assets_floor_id_fkey":"floors"."id" ?<? "assets"."floor_id" [delete: set null]

Ref "assets_seat_id_fkey":"seats"."id" ?<? "assets"."seat_id" [delete: set null]

Ref "engineer_profiles_user_id_fkey":"users"."id" <? "engineer_profiles"."user_id" [delete: cascade]

Ref "floors_building_id_fkey":"buildings"."id" <? "floors"."building_id" [delete: cascade]

Ref "incident_notes_author_id_fkey":"users"."id" <? "incident_notes"."author_id" [delete: restrict]

Ref "incident_notes_incident_id_fkey":"incidents"."id" <? "incident_notes"."incident_id" [delete: cascade]

Ref "incidents_asset_id_fkey":"assets"."id" ?<? "incidents"."asset_id" [delete: set null]

Ref "incidents_assignee_id_fkey":"engineer_profiles"."id" ?<? "incidents"."assignee_id" [delete: set null]

Ref "incidents_building_id_fkey":"buildings"."id" ?<? "incidents"."building_id" [delete: set null]

Ref "incidents_floor_id_fkey":"floors"."id" ?<? "incidents"."floor_id" [delete: set null]

Ref "incidents_reporter_id_fkey":"users"."id" <? "incidents"."reporter_id" [delete: restrict]

Ref "incidents_seat_id_fkey":"seats"."id" ?<? "incidents"."seat_id" [delete: set null]

Ref "notification_events_actor_id_fkey":"users"."id" ?<? "notification_events"."actor_id" [delete: set null]

Ref "notification_events_incident_id_fkey":"incidents"."id" ?<? "notification_events"."incident_id" [delete: cascade]

Ref "notifications_incident_id_fkey":"incidents"."id" ?<? "notifications"."incident_id" [delete: cascade]

Ref "notifications_user_id_fkey":"users"."id" <? "notifications"."user_id" [delete: cascade]

Ref "refresh_tokens_replaced_by_fkey":"refresh_tokens"."id" ?<? "refresh_tokens"."replaced_by" [delete: set null]

Ref "refresh_tokens_user_id_fkey":"users"."id" <? "refresh_tokens"."user_id" [delete: cascade]

Ref "seats_floor_id_fkey":"floors"."id" <? "seats"."floor_id" [delete: cascade]
